# ChangeLog for app-backup/snapper
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/snapper/ChangeLog,v 1.2 2014/05/22 09:56:05 dlan Exp $

*snapper-0.2.2-r1 (22 May 2014)

  22 May 2014; Yixun Lan <dlan@gentoo.org> -snapper-0.2.2.ebuild,
  +snapper-0.2.2-r1.ebuild, snapper-9999.ebuild:
  drop using base.eclass, prune la, minor update

*snapper-9999 (21 May 2014)
*snapper-0.2.2 (21 May 2014)

  21 May 2014; Yixun Lan <dlan@gentoo.org> +snapper-0.2.2.ebuild,
  +snapper-9999.ebuild, +files/cron-confd.patch, +metadata.xml:
  initial version, contributed by Dainius Masiliūnas (GreatEmerald), polished
  by me
