@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/snapper/snapper-0.2.2-r1.ebuild,v 1.1 2014/05/22 09:56:05 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/snapper/snapper-0.2.2-r1.ebuild,v 1.2 2014/05/30 09:59:55 dlan Exp $
 
 EAPI=5
 
@@ -40,15 +40,18 @@ src_prepare() {
 }
 
 src_configure() {
-	econf  \
-	--with-conf="/etc/conf.d" \
-	--docdir="/usr/share/doc/${PF}" \
-	$(use_enable btrfs) \
-	$(use_enable ext4) \
-	$(use_enable lvm) \
-	$(use_enable pam) \
-	$(use_enable xattr xattrs) \
-	--disable-zypp
+	local myeconfargs=(
+		--with-conf="/etc/conf.d"
+		--docdir="/usr/share/doc/${PF}"
+		--disable-zypp
+		$(use_enable btrfs)
+		$(use_enable ext4)
+		$(use_enable lvm)
+		$(use_enable pam)
+		$(use_enable xattr xattrs)
+	)
+
+	econf "${myeconfargs[@]}"
 }
 
 src_install() {
@@ -59,11 +62,9 @@ src_install() {
 }
 
 pkg_postinst() {
-	elog "In order to use Snapper, you need to set up at least one config"
-	elog "manually, or else the tool will get confused. Typically you should"
-	elog "create a '/.snapshots' directory, then copy the file"
-	elog "'/etc/snapper/config-templates/default' into '/etc/snapper/configs/',"
-	elog "rename the file to 'root', and add its name into '/etc/conf.d/snapper'."
-	elog "That will instruct Snapper to snapshot the root of the filesystem by"
-	elog "default. For more information, see the snapper(8) manual page."
+	elog "In order to use Snapper, you need to set up"
+	elog "at least one config first. To do this, run:"
+	elog "snapper create-config <subvolume>"
+	elog "For more information, see man (8) snapper or"
+	elog "http://snapper.io/documentation.html"
 }
