@@ -1,6 +1,11 @@
 # ChangeLog for app-backup/snapper
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/snapper/ChangeLog,v 1.2 2014/05/22 09:56:05 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/snapper/ChangeLog,v 1.3 2014/05/30 09:59:55 dlan Exp $
+
+  30 May 2014; Yixun Lan <dlan@gentoo.org> snapper-0.2.2-r1.ebuild,
+  snapper-9999.ebuild:
+  fix bug #511410, thanks Dainius Masiliūnas,holgersson; combine minor
+  improvement suggested by @jlec
 
 *snapper-0.2.2-r1 (22 May 2014)
 
